@@ -122,3 +122,5 @@
 2016-02-01 Fred Gleason <fredg@paravelsystems.com>
 	* Added code in 'src/glassplayer/conn_hls.cpp' and
 	'src/glassplayer/conn_hls.h' to update the index file automatically.
+2016-02-03 Fred Gleason <fredg@paravelsystems.com>
+	* Implemented audio playout from HLS streams.
